# creative_club_dwh

./: .gitignore  README.md  dbt_project.yml  packages.yml  pyproject.toml
Raw/: Initial-Setup.sql
analyses/: customers.sql  orders.sql  products.sql
models/core/: d_customer.sql  d_date.sql  d_products.sql  d_shops.sql  f_order_positions.sql  f_orders.sql
models/mart/: rep_customer_retention.sql  rep_order_shop_revenue.sql
models/staging/: sources.yaml  stg_customers.sql  stg_order_positions.sql  stg_orders.sql  stg_products.sql  stg_shops.sql
